2010-02-18  Nate Chapin  <japhet@chromium.org>

        Reviewed by Eric Seidel.

        Test for https://bugs.webkit.org/show_bug.cgi?id=34899

        * fast/dom/Window/window-event-override-no-crash-expected.txt: Added.
        * fast/dom/Window/window-event-override-no-crash.html: Added.

2010-02-18  Andras Becsi  <abecsi@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        [Qt] Skip the following tests because of missing eventSender.textZoomIn():

        svg/zoom/text/absolute-sized-document-no-scrollbars.svg
        svg/zoom/text/absolute-sized-document-scrollbars.svg
        svg/zoom/text/relative-sized-document-scrollbars.svg
        svg/zoom/text/zoom-foreignObject.svg
        svg/zoom/text/zoom-hixie-mixed-008.xml
        svg/zoom/text/zoom-hixie-mixed-009.xml
        svg/zoom/text/zoom-hixie-rendering-model-004.xhtml
        svg/zoom/text/zoom-svg-float-border-padding.xml

        * platform/qt/Skipped:

2010-02-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Xan Lopez.

        fast/frames/iframe-reparenting.html crashing on GTK Debug bots
        https://bugs.webkit.org/show_bug.cgi?id=35081

        Unskip test that is now
        fixed (fast/frames/iframe-reparenting.html)

        * platform/gtk/Skipped:

2010-02-18  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html fails (DRT sideeffect)
        https://bugs.webkit.org/show_bug.cgi?id=35086

        fast/xmlhttprequest/xmlhttprequest-no-file-access.html cause
        this fail indirectly, but both of them pass in separated DRT.

        * platform/qt/Skipped: fast/xmlhttprequest/xmlhttprequest-no-file-access.html
        skipped until fix to make buildbot happy.

2010-02-18  Philippe Normand  <pnormand@igalia.com>

        Not reviewed, adding a GTK layout test result for a new test
        added in r54926.
